--- a/src/Components/Pages/Mainpage/left-nav-components/Search.css
+++ b/src/Components/Pages/Mainpage/left-nav-components/Search.css
@@ -1,4 +1,11 @@
-.feed {
-
+.search-feed {
+    max-width: 600px;
+margin-left: 30%;
+align-items: center;
+justify-content: center;
+display: flex;
+flex-direction: column;
+margin-bottom: 100px;
+margin-top: 50px;
 
 }
