--- a/src/Components/EditProfile/AboutMe/AboutMe.css
+++ b/src/Components/EditProfile/AboutMe/AboutMe.css
@@ -1,5 +1,5 @@
 .input-container-bio{
-    height: 210px;
+    height: 240px;
     width: 600px;
     margin-left: 30%;
     align-items: center;
@@ -11,7 +11,21 @@
 
 
 }
-
+.input-container-pro{
+  height: 230px;
+    width: 600px;
+    margin-left: 30%;
+    align-items: center;
+    justify-content: center;
+    font-family: 'Poppins' ;
+  font-size: 12px;
+  color: var(--Pepolls-light-grey);
+  background-color: white;
+}
+.container-pro{
+  display: flex;
+  flex-direction: row;
+}
 .input-container-soc{
     height: 160px;
     width: 600px;
@@ -24,6 +38,45 @@
   background-color: white;
 
 }
+.input-pro-container{
+  background-color: blueviolet;
+  margin-right: 100px;
+}
 .longbio{
     height: 60px;
+
+}
+
+.label-bio-jdida{
+  display: flex;
+  flex-direction: column;
+  width: 500px;
+  justify-content: space-between;
+  height: 80px;
+  margin-left: 10px;
+}
+.select-social{
+  width: 215px;
+  padding: 8px;
+  font-family: "Poppins";
+  color: var(--Pepolls-light-grey);
+  border: none;
+  outline: none;
+  margin-left: -60px;
+
+  text-indent: 67px;
+}
+.input-bio{
+margin-left: -210px;
+}
+.label-pro{
+  display: flex;
+  flex-direction: column;
+  width: 260px;
+  justify-content: space-between;
+  height: 100px;
+  margin-left: 10px;
+}
+.input-pro{
+margin-left: -25px;
 }
