--- a/src/Components/EditProfile/MyInfo/MyIdentity.css
+++ b/src/Components/EditProfile/MyInfo/MyIdentity.css
@@ -1,117 +1,160 @@
-
-
 .input-container {
   height: 320px;
   width: 600px;
   margin-left: 30%;
   align-items: center;
   justify-content: center;
-  font-family: 'Poppins' ;
-font-size: 12px;
-color: var(--Pepolls-light-grey);
-background-color: white;
+  font-family: "Poppins";
+  font-size: 12px;
+  color: var(--Pepolls-light-grey);
+  background-color: white;
+}
+.input-container-links{
+    height: 200px;
+  width: 600px;
+  margin-left: 30%;
+  align-items: center;
+  justify-content: center;
+  font-family: "Poppins";
+  font-size: 12px;
+  color: var(--Pepolls-light-grey);
+  background-color: white;
+}
+.input-field {
+  justify-content: center;
+  display: block;
+  margin-top: 20px;
+  border: none;
+}
+
+.label-jdida {
+  display: flex;
+  flex-direction: column;
+  width: 500px;
+  justify-content: space-between;
+  height: 190px;
+  margin-left: 10px;
+}
+.label-jdida-links{
+    display: flex;
+    flex-direction: column;
+    width: 500px;
+    justify-content: space-between;
+    height:60px;
+}
+.container-jdid {
+  display: flex;
+  flex-direction: row;
+}
+
+.input-jdida {
 
 
 }
 
-.input-field{
-    justify-content: center;
-display: block;
-margin-top: 20px;
-border: none;
-
-
-    }
-
-
+.input-jdida-links{
+    width: 600px;
+}
+.date-of-birth {
+  background-color: green;
+}
 
 label {
-margin-left: 30px;
-
-
+  margin-left: 30px;
 }
 
-.text{
-    margin-left: 30px;
-    padding: 0px;
+.text {
+  margin-left: 30px;
+  padding: 0px;
 }
 
-.myidentity{
-    color: var(  --Pepolls-dark-blue  );
-    font-family: 'Poppins' ;
-font-size: 18px;
-padding-top: 20px;
-margin-bottom: 0px;
+.myidentity {
+  color: var(--Pepolls-dark-blue);
+  font-family: "Poppins";
+  font-size: 18px;
+  padding-top: 20px;
+  margin-bottom: 0px;
 }
 
-.check{
-    font-size: 12px;
-margin-top: 0px;
+.check {
+  font-size: 12px;
+  margin-top: 0px;
+  
 }
 
 input {
-    margin-left: 100px;
-    width: 250px;
-padding: 8px;
-position: relative;
-font-family: 'Poppins' ;
-border:none;
-margin-bottom: 4px;
-outline: none;
+  margin-left: 80px;
+  width: 300px;
+  padding: 8px;
+  position: relative;
+  font-family: "Poppins";
+  border: none;
+  margin-bottom: 4px;
+  outline: none;
+  text-indent: 30px;
 }
 
 .select {
-    margin-left: 100px;
-    width: 250px;
-    padding: 8px;
-    font-family: 'Poppins' ;
-    color: var(--Pepolls-light-grey);
-    border: none;
-    outline: none;
+  margin-left: 80px;
+  width: 215px;
+  padding: 8px;
+  font-family: "Poppins";
+  color: var(--Pepolls-light-grey);
+  border: none;
+  outline: none;
+  text-indent: 67px;
+
+}
+.select-date {
+  text-indent: 35px;
+  color: var(--Pepolls-light-grey);
 }
 option {
-    color: var(  --Pepolls-dark-blue  );
-
+  color: var(--Pepolls-dark-blue);
+ 
 }
 
-
-
-::placeholder{
-color: #F0F0F0;
+::placeholder {
+  color: #f0f0f0;
 }
-.contact-icon{
-    margin-left: 30px;
+.contact-icon {
+  margin-left: 30px;
 }
+.input-link{
+    margin-left: 60px;
+    margin-top: -40px;
+    text-indent: 63px;
 
-.links-container{
-    height: 220px;
+
+}
+.links-container {
+  height: 220px;
   width: 600px;
   margin-left: 30%;
   align-items: center;
   justify-content: center;
-  font-family: 'Poppins' ;
-font-size: 12px;
-color: var(--Pepolls-light-grey);
-background-color: white;
+  font-family: "Poppins";
+  font-size: 12px;
+  color: var(--Pepolls-light-grey);
+  background-color: white;
 }
 
-.button{
-    background-color: white;
-    height: 90px;
+.button {
+  background-color: white;
+  height: 90px;
   width: 600px;
   margin-left: 30%;
   align-items: center;
   justify-content: center;
-  font-family: 'Poppins' ;
+  font-family: "Poppins";
   margin-top: 20px;
-
 }
 
-.change{
-    background-color: yellow;
-    align-items: center;
+.change {
+  background-color: yellow;
+  align-items: center;
   justify-content: center;
-  font-family: 'Poppins' ;
+  font-family: "Poppins";
   border-radius: 20px;
   border: none;
   width: 280px;
@@ -122,16 +165,13 @@ background-color: white;
   width: 500px;
   margin-left: 40px;
   margin-top: 20px;
-
 }
 
-.pic{
-background-color: black;
-margin-top: 45px;
-border-radius: 50%;
-height: 120px;
-width: 120px;
-margin-left: 35%;
-
+.pic {
+  background-color: black;
+  margin-top: 45px;
+  border-radius: 50%;
+  height: 120px;
+  width: 120px;
+  margin-left: 35%;
 }
-
