--- a/src/Components/Pages/Mainpage/LeftNav.css
+++ b/src/Components/Pages/Mainpage/LeftNav.css
@@ -1,30 +1,27 @@
-.left-nav-container{
-    background-color: white;
-    display: flex;
-    flex-direction: column;
+.left-nav-container {
+  background-color: white;
+  display: flex;
+  flex-direction: column;
 
-min-width: 300px;
-height: 300px;
-margin-left: 80px;
-margin-top: 100px;
-position: fixed;
-border-radius: 10px;
-
-
-
+  min-width: 300px;
+  height: 300px;
+  margin-left: 12.5vw;
+  margin-top: 7.5vw;
+  position: fixed;
+  border-radius: 10px;
 }
 
-.routes{
-    display: flex;
-    flex-direction: column;
-    margin-top: 20px;
-font-size: small;
-
+.routes {
+  display: flex;
+  flex-direction: column;
+  margin-top: 20px;
+  font-size: small;
+  margin-left: 10px;
 }
 
 .navigation {
-    color: var(  --Pepolls-dark-blue  );
-    text-decoration: none;
-    display: flex;
-    align-items: center;
+  color: var(--Pepolls-dark-blue);
+  text-decoration: none;
+  display: flex;
+  align-items: center;
 }
