--- a/src/Components/Pages/Mainpage/PostCard.css
+++ b/src/Components/Pages/Mainpage/PostCard.css
@@ -22,10 +22,13 @@
 }
 .post-card {
   /* margin-left: 30%; */
-  max-width: 600px;
-  max-height: 750px; /* background-color: red; */
+  max-width: 450px;
+  max-height: 600px; /* background-color: red; */
   margin-top: 10px;
+  border-radius: 10px;
+
   box-shadow: none !important;
+  
 }
 
 .post-text {
@@ -37,35 +40,41 @@
   justify-content: center;
   display: flex;
   position: relative;
-
   bottom: 60px;
 }
 .vote {
   border: none;
   background-color: transparent;
   border-radius: 100%;
+  align-items: center;
+  justify-content: center;
+  display: flex;
 }
 
 
 .image-post {
-  width: 600px;
-  height: 600px;
+  width: 100%;
+
+    height: 30vw;
+  object-fit: cover;
   align-items: center;
   justify-content: center;
-  display: flex;
-  margin-left: -15px;
 }
 
 .avatar-group {
   margin-top: -40px;
   margin-right: 300px;
+
 }
 
 .image-card {
-  object-fit: contain;
 }
 
 .post-icons-stack {
-  margin-left: 69%;
-  margin-top: -40px;
+  margin-left: 56%;
+  margin-top: -45px;
+  
+}
+.trend-icon{
+margin-top: 5px;
 }
