--- a/src/Styles/Login.css
+++ b/src/Styles/Login.css
@@ -5,21 +5,24 @@
   left: 50%;
   height: 100%;
   position: fixed;
+
 }
 
 .logopepolls {
   margin-top: 2%;
 margin-left: 40%;
+/*
   width: 190px;
   height: 60px;
+  */
+ 
 }
 
 .logometamask {
   /*padding-left: 45%;
   padding-top: 240px;
   */
-  height: 10%;
-  width: 10%;
+  
   margin-bottom: 5%;
 }
 
@@ -31,20 +34,19 @@ margin-left: 40%;
   margin-top: 3%;*/
   border-radius: 20px;
   border: none;
-  width: 280px;
+  width: 250px;
   cursor: pointer;
   font-family: 'Poppins' !important;
 
 }
 
 .link {
-  color: var(--Pepolls-dark-blue);
-  font-size: small;
+  color: black;
+  font-size: 10px;
   cursor: pointer;
   text-decoration: none;
-  margin-top: 4%;
   width: 300px;
-  /*margin-left: 35%;*/
+  margin-left: 90px;
 }
 
 .link:hover {
@@ -65,10 +67,11 @@ margin-left: 40%;
   margin-left: 48%;
   justify-content: space-around;
   border: none;
+  
 }
 
 .description {
-  font-size: small;
+  font-size: 10px;
   text-align-last: center;
   color: var(--Pepolls-light-grey);
   margin-top: 3%;
@@ -79,11 +82,12 @@ margin-left: 40%;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-top: 30%;
+  margin-top: 20%;
 }
 
 .choice {
   margin-top: 15%;
+
 }
 
 .color{
